<resources>
    <string name="app_name" translatable="false">Daily Betting Tips</string>
    <string name="app_email" translatable="false">dailybettingapp@gmail.com</string>

    <string name="navigation_drawer_open" translatable="true">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="true">Close navigation drawer</string>
    <string name="action_settings" translatable="true">Settings</string>

    <!-- Loading Dialogs -->
    <string name="please_wait" translatable="true">Please wait</string>
    <string name="loading_tips" translatable="true">Loading tips...</string>

    <!-- Tab names -->
    <string name="tab_standard" translatable="true">Standard</string>
    <string name="tab_alternative" translatable="true">Alternative</string>
    <string name="bonus_today" translatable="true">Today\'s</string>
    <string name="bonus_history" translatable="true">History</string>

    <!-- New and Old tips layout -->
    <string name="sorry_text" translatable="true">Sorry, There are no available tips today.\nCome back later.</string>

    <!-- Main Activity -->
    <string name="share_message" translatable="true">Give a try on this app https://goo.gl/QcCauP</string>

    <!-- Navigation Drawer -->
    <string name="nav_today" translatable="true">Today\'s Tips</string>
    <string name="nav_history" translatable="true">History of Tips</string>
    <string name="nav_bonus" translatable="true">Bonus Tips</string>
    <string name="nav_guide" translatable="true">Betting Guide</string>
    <string name="nav_social" translatable="true">More</string>
    <string name="nav_feedback" translatable="true">Rate our app</string>
    <string name="nav_support" translatable="true">Support Us</string>
    <string name="nav_donate" translatable="true">Donate</string>
    <string name="nav_send" translatable="true">Invite your friend</string>
    <string name="nav_about" translatable="true">About us</string>

    <!-- Quit Dialog -->
    <string name="quit_title" translatable="true">Exit the application</string>
    <string name="quit_message" translatable="true">Are you sure you want to close the application?</string>
    <string name="no" translatable="true">No</string>
    <string name="yes" translatable="true">Yes</string>

    <!-- Google Spreadsheet -->
    <string name="sheet_id" translatable="false">175XqnHhcOS8CVoBY08xMhaDO39VmauBEFKU9qeaHS3U</string>
    <string name="andriko_history" translatable="false">andriko_history</string>
    <string name="andriko_today" translatable="false">andriko_today</string>
    <string name="tameiarxis_history" translatable="false">tameiarxis_history</string>
    <string name="tameiarxis_today" translatable="false">tameiarxis_today</string>
    <string name="standard_history" translatable="false">standard_history</string>
    <string name="standard_today" translatable="false">standard_today</string>
    <string name="stats" translatable="false">stats</string>

    <string name="message" translatable="false">message</string>

    <string name="ok" translatable="true">Ok</string>


    <!-- In App Biling -->
    <string name="subscriber" translatable="false">sgiorgos</string>
    <string name="friendly" translatable="false">fgiorgos</string>
    <string name="vip" translatable="false">vgiorgos</string>
    <!-- In App Biling Layout -->
    <string name="f_title">Friendly Donation</string>
    <string name="f_text1">- Leave a tip for our team</string>
    <string name="f_text2">- Help us with a small donation</string>
    <string name="f_button">leave a tip</string>
    <string name="s_title">Become a subscriber</string>
    <string name="s_text1">- 12 months subscription</string>
    <string name="s_text2">- Remove Ads</string>
    <string name="s_text3">- Subscriber tips coming soon</string>
    <string name="s_button">Join Us</string>
    <string name="v_title">VIP Member</string>
    <string name="v_text1">- Lifetime subscription</string>
    <string name="v_text2">- Remove Ads</string>
    <string name="v_text3">- Subscriber tips coming soon</string>
    <string name="v_button">Purchase this item</string>




    <!-- Info fragment -->
    <string name="info_message" translatable="true"><b>Daily Betting Tips</b> contains some useful tips about betting.<b> Just in case, we want to make it clear that we do not take any responsibility about the results of betting.</b>We are just a group of guys who are passionate about football and have some knowledge about betting.</string>
    <string name="info_message2" translatable="true">Our goal is to earn ourselves some profit.We would like to wish everybody good luck and thank you about your support and feedback.<b>\nFor any questions about the application please feel free to contact us at : dailybettingapp@gmail.com</b></string>
    <string name="build_version" translatable="true">Build Version </string>

    <string name="we_need_your_help" translatable="true">We need your help!</string>
    <string name="please_take_a_moment" translatable="true">Please take a moment to rate it.We really appreciate it.</string>
    <string name="cancel" translatable="true">Cancel</string>
    <string name="rate_it" translatable="true">Rate it</string>
    <string name="error_server" translatable="true">Error with Google server.</string>

    <!-- Stats -->
    <string name="stats_title" translatable="true">Statistics</string>
    <string name="stats_total" translatable="true">Total tips in history :</string>
    <string name="stats_won" translatable="true">Won :</string>
    <string name="stats_lost" translatable="true">Lost :</string>
    <string name="stats_perc" translatable="true">Success Percentage :</string>
    <string name="first_odd" translatable="true">Odd &lt; 1.50</string>
    <string name="mid_odd" translatable="true">1.50 &lt; Odd &lt; 2.00</string>
    <string name="right_odd" translatable="true">Odd &gt; 2.00</string>

    <!-- FACEBOOK ADS -->
    <string name="today_banner" translatable="false">314020665687947_324069141349766</string>
    <string name="history_banner" translatable="false">314020665687947_324069448016402</string>
    <string name="bonus_banner" translatable="false">314020665687947_324069601349720</string>
    <string name="interstitial_ad" translatable="false">314020665687947_324069898016357</string>

    <string name="facebook_app_id" translatable="false">314020665687947</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb314020665687947</string>



</resources>
