<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_news_tips"
            android:icon="@drawable/ic_today_black_24dp"
            android:title="@string/nav_today" />
        <item
            android:id="@+id/nav_old_tips"
            android:icon="@drawable/ic_chrome_reader_mode_black_24dp"
            android:title="@string/nav_history" />
        <item
            android:id="@+id/nav_bonus_tips"
            android:icon="@drawable/ic_whatshot_black_24dp"
            android:title="@string/nav_bonus" />
        <item
            android:id="@+id/nav_guides"
            android:icon="@drawable/ic_show_chart_black_24dp"
            android:title="@string/nav_stats" />


    </group>

    <item android:title="@string/nav_social">
        <menu>
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_loyalty_black_24dp"
                android:title="@string/nav_feedback" />
            <item
                android:id="@+id/nav_send"
                android:actionProviderClass="android.widget.ShareActionProvider"
                android:icon="@drawable/ic_send_black_24dp"
                android:title="@string/nav_send" />
            <item
                android:checkable="true"
                android:id="@+id/nav_info"
                android:icon="@drawable/ic_info_black_24dp"
                android:title="@string/nav_about" />
        </menu>
    </item>

</menu>
